# starry

./: .gitignore  CMakeLists.txt  Makefile  README.md
config/: config.json
data/: IDlabels.csv  idOnly.csv  id_to_labels.py  img.csv  labels.csv  png_to_csv.py  sampleLabels.csv  sampleTraining.csv  txt_to_csv.py
data/image_constellation/: constellation_names.txt
include/: Layer.hpp  Matrix.hpp  Network.hpp  Neuron.hpp
include/utils/: math.hpp  misc.hpp
src/: Layer.cpp  Matrix.cpp  Neuron.cpp  main.cpp  train.cpp
src/neuralNetwork/: BackPropagation.cpp  FeedForward.cpp  Network.cpp  SetErrors.cpp  Train.cpp
src/utils/: math.cpp  misc.cpp
